--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
           </li>
         </ul>
-    
+        <div class="wrapper">
         <div class="title">
           <h1>DocSpot</h1>
         </div>
@@ -26,6 +26,7 @@
                 <tr><td colspan="2" id='tdata'>View Calendar</td></tr>
                 <tr><td colspan="2" id='tdata'>Upload Patient Report</td></tr>
             </table>
+        </div>
         </div>
         </form>
     </body>
